@@ -10,3 +10,4 @@
   18-Sep-2019    V0.18 Address Py27 dependency issue
   19-Sep-2019    V0.19 Move SeqAlign() utility class to this module
   23-Sep-2019    V0.20 Guarantee order and uniqueness from SiftsProvider.getIndentifiers()
+   6-Oct-2019    V0.21 Include GO in the abbreviated set
